--- a/style.css
+++ b/style.css
@@ -37,17 +37,6 @@ format('truetype');
     font-style: normal;
 }
 @font-face{
-    font-family: 'Vagabond';
-    src: url('fonts/Vagabond.woff2')
-format('woff2'),
-         url('fonts/Vagabond.woff')
-format('woff'),
-         url('fonts/Vagabond.ttf')
-format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face{
     font-family: 'Lucida Sans Unicode';
     src: url('fonts/LucidaSansUnicode.woff2')
 format('woff2'),
@@ -82,7 +71,7 @@ body{
 }
 .loader-wrapper{
     display: flex;
-    transform: translate(50%, 300px);
+    transform: translate(calc(50% - 10px),280px);
     z-index: 1000;
     animation: hideloader 1s 3s forwards;
 }
@@ -92,9 +81,9 @@ body{
     border: 2px solid white;
     border-radius: 50%;
     border-bottom: 4px solid var(--primary);
-    animation: bounce 1s infinite ease-in-out;
+    animation: circle 1s infinite ease-in-out;
 }
-@keyframes bounce{
+@keyframes circle{
     0%{
         rotate: 0deg;
     }
@@ -472,7 +461,7 @@ header nav{
     justify-content: space-between;
 }
 .line-radio{
-    width: 540px;
+    width: 470px;
     height: 2px;
     background-color: #c7c7c7;
     position: absolute;
@@ -688,6 +677,17 @@ textarea{
     justify-content: center;
     gap: 20px;
 }
+@keyframes box-shadow{
+    0%{
+        box-shadow: 2px 2px 5px 2px rgba(231, 231, 231, 0.85);
+    }
+    50%{
+        box-shadow: 2px 2px 5px 2px rgba(185, 185, 185, 0.85);
+    }
+    100%{
+        box-shadow: 2px 2px 5px 2px rgba(231, 231, 231, 0.85);
+    }
+}
 .chefs-details{
     padding: 20px;
     box-shadow: 2px 2px 5px 2px rgba(231, 231, 231, 0.85);
@@ -696,6 +696,7 @@ textarea{
     font-size: 20px;
     font-family: var(--font);
     padding-top: 40px;
+    animation: box-shadow 3s ease-in-out infinite;
 }
 .chefs-flexbox img{
     width: 200px;
