--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 }
 :root{
     --color : rgb(2, 24, 5);
+	--theme:#ff7f27;
 }
 a{
 	color: white;
@@ -18,43 +19,21 @@ a{
 h1{
 	font-size: 2.8rem;
 	margin-bottom: 10px;
-	text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.3);
 }
 p{
 	font-size: 1.2rem;
 	margin-bottom: 40px;
 	line-height: 30px;
 }
-@keyframes fadeIn {
-	from {
-	  opacity: 0;
-	}
-	to {
-	  opacity: 1;
-	}
-}
 header {
-	animation: slideDown 1s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: transparent;
   }
-@keyframes slideDown {
-	from {
-	  transform: translateY(-100px);
-	}
-	to {
-	  transform: translateY(0);
-	}
-  }
-@keyframes pop-up{
-	0%, 100%{
-		transform: translateY(0);
-	}
-	50%{
-		transform: translateY(5px);
-	}
-}
-header, .content{
+/* header, .content{
 	animation: fadeIn 1s ease-in-out;
-}
+} */
 body{
 	font-family: 'popins' , sans-serif;
 	overflow-x: hidden;
@@ -69,18 +48,12 @@ header img{
 	width: 120px;
 	height: 50px;
 }
-section {
-	transition: transform 0.5s;
-}
-section:hover {
-	transform: translateY(-10px);
-} 
 header{
 	width: 100%;
 	padding: 15px 40px;
-	background-color: rgba(28, 37, 12, 0.7); 
 	display: flex;
 	justify-content: space-between;
+	z-index: 1;
 }
 nav{
 	display: flex;
@@ -89,19 +62,44 @@ nav{
 	align-items: center;
 }
 nav a{
-	transition: color 0.2s, transform 0.2s;
-	font-weight: bold;
+	transition: color 0.2s, scale 0.3s,background 0.5s;
+	color: transparent;
+	background-image: linear-gradient(to right,var(--theme) 50%,white 50%);
+	background-size: 200%;
+	background-position: 100% 0;
+	background-clip: text;
 }
 nav a:hover{
-	color: var(--color);
-    transform: scale(1.05);
+	color: transparent;
+	background-position: 0 0;
+	scale: 1.25;
+}
+a.btn-ctn{
+	cursor: pointer;
+	background-image: none;
+	color: white;
+}
+a.btn-ctn:hover{
+	color: white;
+	background-image: none;
+}
+a.btn-ctn:active{
+	scale: 1.5 0.75;
+}
+a.btn-ctn:hover.active{
+	color: white;
+	background-image: none;
+}
+a.btn-ctn:active.active{
+	scale: 1;
 }
 .active{
-	color: var(--color);
+	color: rgba(255,255,255,0.5);
+	background: none;
 }
 .active:hover{
-	color: var(--color);
-	transform: scale(1);
+	color: rgba(255,255,255,0.5);
+	scale: 1;
 }
 .content{
 	height: 100vh;
@@ -111,44 +109,62 @@ nav a:hover{
 	max-width: 800px;
 }
 .btn-ctn{
+	all: unset;
 	padding:15px 40px;
-	border-radius: 3px;
+	border-radius: 5px;
 	transition: background-color 0.2s;
-	background-color: #235536;
+	background-color: var(--theme);
+	transition: 0.25s cubic-bezier(0.15, 1.2, 0.66, 1.47);
 }
 .btn-ctn:hover{
-	background-color: #8cc595;
+	filter: brightness(125%);
 }
 .about,
 .image-gallery{
 	display: grid;
+	height: 100dvh;
+	align-items: center;
+	justify-items: center;
+	align-content: center;
 	grid-template-columns: 50% 50%;
 	padding: 20px;
 	gap: 10px;
-	background-color: rgba(26, 61, 24, 0.726);
+}
+.about{
+	background: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(./pictures/bg.jpg) no-repeat center;
+	background-size: cover;
 }
 .image-gallery{
 	background-color: transparent;
-}
-.about{
-	margin: 50px 0;
-	animation: fadeIn 2s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
+	transform: translateY(30px);
+	height: fit-content;
 }
 .about-details{
-	margin: auto;
 	max-width: 500px;
 	text-align: justify;
 }
 .image-gallery img{
 	width: 100%;
 	height: 250px;
-	animation: pop-up 1s linear infinite;
+}
+img.smimg{
+	height: 150px;
+	width: auto;
+}
+img.smimg.fir{
+	align-self: self-end;
+	justify-self: self-start;
+}
+img.smimg.sec{
+	align-self: baseline;
+	justify-self: flex-end;
 }
 .services{
-	margin: 0 40px;
+	height: 100dvh;
 	text-align: center;
-	color: var(--color);
-	animation: fadeIn 1s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
+	background: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(./pictures/bg.jpg) no-repeat center;
+	background-size: cover;
+	padding-top: 70px;
 }
 .service-details{
 	display: grid;
@@ -160,47 +176,99 @@ nav a:hover{
 	width: 100%;
 	height: 270px;
 	margin-bottom: 20px;
+	border-radius: 10px;
+	scale: 1.25;
+	transition: 0.3s linear;
 }
 .s1{
 	transition: box-shadow 0.2s;
 	cursor: pointer;
 	box-shadow: 1px 2px 3px #000;
-	padding: 10px;
 	text-align: left;
+	background-color: white;
+	border-radius: 15px;
+	height: 280px;
+	position: relative;
+	overflow: hidden;
+	border: 5px solid white;
 }
-.s1:hover{
-	box-shadow: 4px 4px 4px #000;
+.imgcap{
+	position: absolute;
+	top: 100%;
+	padding: 20px;
+	height: 100%;
+	width: 100%;
+	background-color: rgba(255, 255, 255, 0.7);
+	backdrop-filter: blur(0px);
+	border-radius: 10px;
+	transition: 0.3s linear;
+	color: #25252500;
+}
+.s1:hover>.imgcap{
+	top: 0px;
+	backdrop-filter: blur(5px);
+	color: #252525;
+}
+.s1:hover>img{
+	scale: 1;
 }
 .contact{
+	height: 100dvh;
+	width: 100vw;
 	display: grid;
+	padding-top: 70px;
 	grid-template-columns: 45% 55%;
-	margin: 50px 60px;
 	background: linear-gradient(rgba(0,0,0,0.85),rgba(0,0,0,0.85)),url(./pictures/bg.jpg) no-repeat center;
 	background-size: cover;
-	animation: fadeIn 1s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
 }
 .contact-details{
 	text-align: center;
 	width: 400px;
-	transform: translate(20%, 25%);
+	height: fit-content;
+	transform: translateX(20%);
+	align-self: center;
+	scale: 1.25;
 }
 fieldset{
 	padding: 30px;
 	border: none;
-	border-left: 3px dotted #fff;
+	border-left: 3px solid #fff;
 	margin-bottom: 10px;
 }
 input,
 textarea{
 	padding: 8px;
-	margin: 15px 45px;
+	margin: 10px 15px;
 	height: 45px;
 	width: 80%;
 	font-size: 1.1rem;
-	color: #000;
+	color: #fff;
+	outline: none;
+	border-radius: 5px;
+	background-color: #ffffff2c;
+	border: 0px solid white;
+	transition: 0.125s linear;
+}
+input:focus,input:valid,textarea:focus,textarea:valid{
+	border: 3px solid white;
+}
+input::placeholder,textarea::placeholder{
+	color: #ffffffa6;
+}
+input[type=submit]{
+	border: none;
+	cursor: pointer;
+	background-color: #ffffff2c;
+	color: white;
+	transition: 0.25s linear;
+}
+input[type=submit]:hover{
+	background-color: #fff;
+	color: #252525;
 }
 textarea{
 	height: 100px;
+	resize: none;
 }
 footer{
 	background-color: #193826;
@@ -208,31 +276,45 @@ footer{
     text-align: center;
     letter-spacing: 0.5px;
 }
-@media (max-width: 770px) {
-	.home,
-	.service-details,
-	section{
-	  grid-template-columns: 1fr;
-	}
-  }
 .login-container {
+	height: 100dvh;
   display: flex;
   justify-content: center;
   text-align: center;
+  background: linear-gradient(rgba(0,0,0,0.85),rgba(0,0,0,0.85)),url(./pictures/bg.jpg) no-repeat center;
+  background-size: cover;
+  color: white;
 }
 h2{
 	margin-bottom: 20px;
 	font-size: 30px;
+	color: white;
+}
+.login-form>form>span{
+	display: inline-block;
+	text-align: start;
+	width: 80%;
 }
 .login-form {
   width: 500px;
-  height: 450px;
-  background-color: rgba(64, 112, 55, 0.788);
-  animation: slideDown 1s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
+  height:fit-content;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #fff2;
+  backdrop-filter: blur(5px);
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-top: 50px;
   padding-top: 50px;
   color: var(--color);
 }
 
+.tt{
+	color: var(--theme);
+}
+input[type=checkbox]{
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	accent-color: var(--theme);
+}
