--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
 @keyframes slideDown { from { transform: translateY(-100%); } to { transform: translateY(0); } }
 @keyframes slide { from { opacity: 0; transform: translateX(100%); } to { opacity: 1; transform: translateX(0); } }
 @keyframes slideRight { from { opacity: 0; transform: translateX(-100%); } to { opacity: 1; transform: translateX(0); } }
+@keyframes opening{
+	0% {transform: scale(0); /}
+	50% {transform: scale(1.1); }
+	100% {transform: scale(1); }
+}
 @keyframes jump { 
     0% { transform: translateY(20%); opacity: 0; } 
     50% { transform: translateY(-10%); opacity: 1; } 
@@ -257,15 +262,13 @@ span {
 .login-form { 
     width: 500px; 
     position: absolute; 
-    top: 50%; 
-    transform: translateY(-50%); 
+    top: 25%; 
     background-color: #fff2; 
     backdrop-filter: blur(5px); 
     border-radius: 10px; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
     padding-top: 50px; 
-    animation: fadeIn 2s ease forwards; 
-    opacity: 0; 
+	animation: opening 1.5s ease forwards;
 }
 .tt{
 	color: var(--theme);
